# stm32l476-clibs-bindings

./: .gitmodules  Cargo.toml  README.md  build.rs  c_bindings.map  reset.jlink  wrapper.h
src/: config.rs  main.rs  stm32l4_peripherals.rs
src/bindings/: mod.rs  shtp.rs
