[package]
authors = ["Matvei <matvei@wheel.me>"]
edition = "2018"
readme = "README.md"
name = "c_bindings"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
cfg-if = "0.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
vhrdcan = { path = "../vhrdcan" }
cortex-m-rtic = "0.5"
embedded-hal = "0.2.4"
cty = "0.2.1"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"

[dependencies.stm32l4xx-hal]
version = "0.6"
default-features = false
features = ["rt", "stm32l4x6"]
optional = false

[[bin]]
name = "c_bindings"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = false# symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 'z' #z

